exam/yaml_standard/fastapi/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  selector:
    app: fastapi
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
