exam/yaml_standard/fastapi/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - secretName: fastapi-secret
    hosts:
    - streaming.davy-data.cloudns.ph
  rules:
  - host: streaming.davy-data.cloudns.ph
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
            name: fastapi-service
            port:
              number: 80
